data/derived/comb/progs/unify/prog1153.ml.out
Characters 81-83:
  | hd::tl -> f (f a hd) tl in
                         ^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
